data/derived/comb/progs/unify/prog7249.ml.out
Characters 136-140:
  let (_, res) = List.fold_left f base args in
                                       ^^^^
Error: This expression has type 'a * 'b
       but an expression was expected of type int list
